@@ -8,4 +8,4 @@
 # project structure.
 
 # Project target.
-target=android-8
+target=android-26
